# platform

./: .gitignore  Makefile  REMOVE_CRDs.md  test-e2e-control-plane.sh
.github/workflows/: ambient-control-plane-tests.yml  components-build-deploy.yml  prod-release-deploy.yaml
components/ambient-control-plane/: CLAUDE.md  Dockerfile  Dockerfile.simple  Makefile  README.md  go.mod  go.sum
components/backend/: main.go  routes.go
components/runners/ambient-runner/: .mcp.json  Dockerfile  architecture.md  pyproject.toml
components/runners/ambient-runner/ag_ui_claude_sdk/: adapter.py  config.py  hooks.py  utils.py
components/runners/ambient-runner/ag_ui_gemini_cli/: adapter.py
components/runners/ambient-runner/ambient_runner/: _grpc_client.py  _session_messages_api.py  app.py  bridge.py
components/runners/ambient-runner/ambient_runner/bridges/claude/: auth.py  bridge.py  grpc_transport.py  mcp.py  mock_client.py  prompts.py  session.py
components/runners/ambient-runner/ambient_runner/bridges/gemini_cli/: auth.py  bridge.py  commands.py  feedback_server.py  mcp.py  session.py  system_prompt.py
components/runners/ambient-runner/ambient_runner/endpoints/: events.py  repos.py  run.py  tasks.py  workflow.py
components/runners/ambient-runner/ambient_runner/platform/: auth.py  feedback.py  prompts.py  utils.py
components/runners/ambient-runner/ambient_runner/tools/: backend_api.py
components/runners/ambient-runner/tests/: test_app_initial_prompt.py  test_bridge_claude.py  test_events_endpoint.py  test_git_identity.py  test_grpc_transport.py
(+191 files in other folders)
